lagt till counters för att visa hur många resultat som visas på de 3 huvudsidorna

--- a/generator.html
+++ b/generator.html
@@ -245,6 +245,9 @@
     <!-- Sök Knapp -->
     <button id="searchBtn" class="big-button">Sök</button>
 
+    <div id="result-count" style="display: none; text-align: center; font-size: 18px; margin-top: 10px;"></div>
+
+
     <div id="data-container"></div>
 
 
