--- a/ingrediensassistenten.html
+++ b/ingrediensassistenten.html
@@ -111,6 +111,8 @@
         <div class="tag-container"></div>
     </div>
 
+    <div id="result-count" style="display: none; text-align: center; font-size: 18px; margin-top: 10px;"></div>
+
 
     <div id="data-container" class="initial"></div>
 
