ny text matgenerator

--- a/generator.html
+++ b/generator.html
@@ -58,7 +58,7 @@
             <span id="more-text" class="hidden">
                 Klicka sedan på <strong>sök</strong> för att få fram recept som stämmer med dina val.
                 <strong>Om du t.ex. väljer</strong> soppa och förrätt och sedan fisk och vegetariskt så kommer resultaten
-                kanske att vara en fisksoppa och en vegetarisk förrätt.
+                kanske att vara en fisksoppa och en vegetarisk förrätt. Obs: Ibland är det svårt att identifiera var en rätt kommer ifrån, vi har gjort vårt bästa för att det ska vara enkelt att få fram bra recept så det med en nypa salt!
             </span>
         </p>
         <a id="read-more" href="javascript:void(0);">Läs mer</a>
