--- a/generator.html
+++ b/generator.html
@@ -74,34 +74,43 @@
     <div class="filter-container" id="mealtype">
         <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
             <img src="images/mageneratorikoner/lunchmiddag.svg" alt="lunchmiddag" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button" data-category="mealtype" data-filter="pasta">
             <img src="images/mageneratorikoner/pasta.svg" alt="Pasta" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="forratter">
             <img src="images/mageneratorikoner/forattertilltugg.svg" alt="Förrätter och tilltugg" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button" data-category="mealtype" data-filter="streetfood">
             <img src="images/mageneratorikoner/streetfood.svg" alt="Streetfood" />
+            <span class="badge hidden">0</span>
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="mealtype" data-filter="frukostbrunch">
             <img src="images/mageneratorikoner/frukostbrunch.svg" alt="Frukost Brunch" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="barnvanligt">
             <img src="images/mageneratorikoner/barnvanligt.svg" alt="Barnvänligt" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="soppa">
             <img src="images/mageneratorikoner/soppa.svg" alt="Soppa" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="sallad">
             <img src="images/mageneratorikoner/sallad.svg" alt="Sallad" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="sasdipproror">
             <img src="images/mageneratorikoner/sasdipproror.svg" alt="Sås, dipp och röror" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="mealtype" data-filter="fika">
             <img src="images/mageneratorikoner/efterattfika.svg" alt="Efterrätt och fika" />
+            <span class="badge hidden">0</span>
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
@@ -128,22 +137,28 @@
     <div class="filter-container" id="proteins">
         <div class="image-button" data-category="protein" data-filter="not">
             <img src="images/mageneratorikoner/not.svg" alt="Nöt" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button" data-category="protein" data-filter="fisk">
+            <span class="badge hidden">0</span>
             <img src="images/mageneratorikoner/fisk.svg" alt="Fisk" />
         </div>
         <div class="image-button" data-category="protein" data-filter="fagel">
+            <span class="badge hidden">0</span>
             <img src="images/mageneratorikoner/fagel.svg" alt="Fågel" />
         </div>
         <div class="image-button" data-category="protein" data-filter="flask">
+            <span class="badge hidden">0</span>
             <img src="images/mageneratorikoner/flask.svg" alt="Fläsk" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
         <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
             <img src="images/mageneratorikoner/vegetarisk.svg" alt="Vegetarisk" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="vegansk">
             <img src="images/mageneratorikoner/vegansk.svg" alt="Vegansk" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button hidden" data-category="protein" data-filter="skaldjur">
             <img src="images/mageneratorikoner/skaldjur.svg" alt="Skaldjur" />
@@ -175,12 +190,15 @@
     <div class="filter-container" id="countries">
         <div class="image-button" data-category="country" data-filter="italien">
             <img src="images/mageneratorikoner/italien.svg" alt="Italien" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button" data-category="country" data-filter="sverige">
             <img src="images/mageneratorikoner/sverige.svg" alt="Sverige" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button" data-category="country" data-filter="japan">
             <img src="images/mageneratorikoner/japan.svg" alt="Japan" />
+            <span class="badge hidden">0</span>
         </div>
         <div class="image-button" data-category="country" data-filter="indien">
             <img src="images/mageneratorikoner/indien.svg" alt="Indien" />
